--- a/Views/Registration/Index.cshtml
+++ b/Views/Registration/Index.cshtml
@@ -7,8 +7,18 @@
     int eventId = Model.EventsCol.FirstOrDefault()?.EventID ?? -1;
     string evName = Model.getEventName(eventId);
 }
-<h2>Registration</h2>
-<h3>Event @evName</h3>
+
+<div class="form-group">
+    <div class="col-md-offset-2 col-md-10">
+        <h2>Registration</h2>
+    </div>
+</div>
+
+<div class="form-group">
+    <div class="col-md-offset-2 col-md-10" style="color:green">
+        <h3>Event @evName </h3>
+    </div>
+</div>
 
 <p>
     @Html.ActionLink("Create New Registration", "CreateRegistration")
